--- a/FluentUI/CMakeLists.txt
+++ b/FluentUI/CMakeLists.txt
@@ -71,6 +71,8 @@ if (WIN32)
     list(APPEND sources_files qhotkey/qhotkey_win.cpp)
 elseif (APPLE)
     list(APPEND sources_files qhotkey/qhotkey_mac.cpp)
+elseif (ANDROID)
+    list(REMOVE_ITEM sources_files FluHotkey.cpp FluHotkey.h qhotkey/qhotkey.cpp qhotkey/qhotkey.h qhotkey/qhotkey_p.h)
 elseif (UNIX)
     list(APPEND sources_files qhotkey/qhotkey_x11.cpp)
 endif()
@@ -206,6 +208,17 @@ if(APPLE)
     target_link_libraries(${PROJECT_NAME} PRIVATE ${CARBON_LIBRARY})
 elseif(WIN32)
     target_link_libraries(${PROJECT_NAME} PRIVATE user32)
+elseif(ANDROID)
+    if(QT_VERSION_MAJOR STREQUAL "6")
+        if(QT_VERSION VERSION_LESS "6.2.0")
+            message(FATAL_ERROR "Qt 6.2.0 or greater is required when using Qt6")
+        endif()
+    else()
+        if(QT_VERSION_MAJOR LESS "6")
+            find_package(Qt5 REQUIRED COMPONENTS X11Extras)
+            target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::X11Extras)
+        endif()
+    endif()
 elseif(UNIX)
     if(QT_VERSION_MAJOR STREQUAL "6")
         if(QT_VERSION VERSION_LESS "6.2.0")
