--- a/.github/workflows/build_msix.yml
+++ b/.github/workflows/build_msix.yml
@@ -41,7 +41,7 @@ jobs:
           host: 'windows'
           target: 'desktop'
           arch: 'win64_msvc2022_64'
-          modules: 'qtmultimedia qt5compat'
+          modules: 'qtmultimedia qt5compat qtshadertools'
 
       - uses: ilammy/msvc-dev-cmd@v1
         with:
