软件版本号

--- a/.github/workflows/build_msix.yml
+++ b/.github/workflows/build_msix.yml
@@ -79,5 +79,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: FMusic-MSIX
+          name: FMusic-Windows-x64.msix
           path: FMusic.msix
