--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
 
-project(FMusic VERSION 1.0)
+project(FMusic VERSION 2.0.0.0 LANGUAGES CXX)
 
 add_subdirectory(FluentUI)
 add_subdirectory(src)
